app: fix email icon alignment

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -64,3 +64,8 @@ a:hover {
   fill: currentColor;
   stroke: currentColor;
 }
+
+.icon.icon-email svg {
+  vertical-align: -0.225em;
+  margin-right: 5px;
+}
